--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -819,11 +819,11 @@ Ainsi nous évitons un cas trop « parfait ».}
 
 \subsubsection{Compression et traction entre cellules}
 
-\paragraph{Loi de Hook}
+\paragraph{Loi de Hooke}
 \medbreak
 Maintenant que nous avons la formule pour la répartition de la vélocité entre les cellules, nous devons gérer les cas de compression et de traction.
 Les cellules adjacentes doivent toujours viser une distance parfaite équivalente à $1$.
-En théorie, la compression et la traction doivent être régies par la loi de Hook complémentée du module de Young. Cette loi met en relation le coefficient de déformation (en \%), la contrainte appliquée sur le matériau (en Pa) et la caractéristique du matériau trouvé dans le module de Young (en Pa).
+En théorie, la compression et la traction doivent être régies par la loi de Hooke complémentée du module de Young. Cette loi met en relation le coefficient de déformation (en \%), la contrainte appliquée sur le matériau (en Pa) et la caractéristique du matériau trouvé dans le module de Young (en Pa).
 La formule de cette loi se présente sous la forme de~:
 \begin{center}
   \boxed{\sigma = E \times \epsilon}
