Refonte de la section "Les limites du réalisme".

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -929,10 +929,11 @@ Nous allons voir plus bas que notre objectif initial était loin d'être réalis
 
 \subsubsection{Les limites du réalisme}
 
-Comme nous l'avons de nombreuses fois montré, notre simulation se base uniquement sur des approximations.
-La répartition de la vélocité n'est pas exacte et nous utilisons une grande approximation pour la compression.
-L'ensemble forme ainsi une pile d'approximation marchant en cohésion.
-Tout le long de la création de la simulation nous avions remarqué de nombreuses fois des « explosion de cellules », celle ci était alors éjecté de la plaque à une très grande distance.
+Comme nous l'avons de nombreuses fois montré, notre simulation a été obligé d'utiliser plusieurs approximations.
+La répartition de la vélocité n'est pas exacte et nous utilisons pas la loi de Hooke pour la compression à cause du modèle choisi.
+L'ensemble forme ainsi une pile d'approximation n'est sans moins marchant superbement en cohésion.
+Tout le long de la création de la simulation nous avions remarqué de nombreuses instabilité, certaine fois des « explosions de cellules », celle ci était alors éjecté de la plaque à une très grande distance et vitesse.
+Cela prouve que la simulation géomorphologique n'est pas une mince à faire pour avoir un résultat un tant soit peu réaliste.
 
 \subsubsection{Les limites de temps de calcul}
 
