Dernier coup de karcher

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -470,11 +470,11 @@ Pour rester cohérents avec notre problématique et notre objectif, nous avons c
 \medbreak
 Il est fréquent chez les chercheurs géologues de remplacer les couches par divers ingrédients plus ou moins courants~: de la pâte à modeler, du sable mélangé avec de l'huile ou tout autre pâte ductile colorée.
 Ces différentes couches sont soigneusement empilées et leurs propriétés sont choisies avec soin de sorte à faire l'analogie avec les couches géologiques d'un paysage réel.
-Ces simulations, bien que limitées, arrivent à simuler des contraintes de déformation très précises, pour avoir un aperçu visuel d'une démonstration en géologie (ex~: tectonique des plaques, démonstration par l'expérience de l'existence de certains types de plissements) ou pour démontrer l'existence de certains comportements et propriétés dans un système géologiques.
-La plupart des simulations, encore aujourd'hui, et ce par souci de rapidité et de réalisme, modélisent des phénomènes très précis (pour réduire la complexité de la mise en œuvre, conformément à la méthode scientifique) en utilisant des propriétés physiques.
-Ils simulent souvent les phénomènes de compression et donc de plissement par différentes couches successives de pâte à modeler de consistance et de propriétés différentes pour simuler les phénomènes observés dans la nature.
+Ces simulations, bien que limitées, arrivent à représenter des contraintes de déformation très précises, pour avoir un aperçu visuel d'une démonstration en géologie (ex~: tectonique des plaques, démonstration par l'expérience de l'existence de certains types de plissements) ou pour démontrer l'existence de certains comportements et propriétés dans un système géologiques.
+La plupart de ces simulations sont utilisées, encore aujourd'hui (par souci de rapidité et de réalisme), et modélisent des phénomènes très précis en utilisant des propriétés physiques.
+Ils simulent souvent les phénomènes de compression et donc de plissement par différentes couches successives de pâte à modeler de consistance et de propriété différentes pour simuler les phénomènes observés dans la nature.\\
 La collision de la plaque indienne avec la plaque euro-asiatique a ainsi reçu une illustration réaliste grâce à un pressoir en métal (représentant l'inde) s'enfonçant dans de la pâte à modeler (représentant l'Asie).
-D'autre simulation du même genre mettent en valeur certains types de plis, plis couchés, plis droits et autre. Cependant, ces différentes simulations, bien que très parlantes, prouvent rarement des conjectures car elles sont difficilement reproductibles et nécessitent surtout beaucoup de suppositions qui détachent leur mises en œuvre de la réalité.
+D'autres simulations du même genre mettent en valeur certains types de plis, plis couchés, plis droits et autre. Cependant, ces différentes simulations, bien que très parlantes, prouvent rarement des conjectures car elles sont difficilement reproductibles et nécessitent surtout beaucoup de suppositions qui détachent leur mises en œuvre de la réalité.
 
 \begin{center}
   \includegraphics[width=6.2cm]{Images/simulation_physique.png}
@@ -484,7 +484,7 @@ D'autre simulation du même genre mettent en valeur certains types de plis, plis
 
 \paragraph{La place de la physique dans la simulation}
 \medbreak
-Dans ce contexte, la géologie a par ailleurs beaucoup appris de la physique, qui l'a amené à conduire d'autres types d'expériences pour trouver les propriétés de certaines roches soumises à des conditions de pressions et de températures intenses, ou bien les réactions chimiques opérant lors de l'érosion de roches calcaires par un milieu riche en $CO_2$.
+Dans ce contexte, la géologie a beaucoup appris de la physique, qui l'a amené à conduire d'autres types d'expériences pour trouver les propriétés de certaines roches soumises à des conditions de pressions et de températures intenses, ou bien pour trouver les réactions chimiques opérant lors de l'érosion de roches calcaires par un milieu riche en $CO_2$.
 
 \subsubsection{La simulation numérique par automate cellulaire}
 
